--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ nb-configuration.xml
 
 /src/main/java/security/SharedSecret.java
 
-/src/main/resources/META-INF/persistence.xml
+#/src/main/resources/META-INF/persistence.xml
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/netbeans,windows,macos,intellij,visualstudiocode
